# gen-cats

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: 00_results_overview.ipynb  01_fid_analysis.ipynb  02_qualitative_samples.ipynb  03_interpolation.ipynb  04_prior_comparison.ipynb  05_chimera.ipynb  06_mlflow_training_summary.ipynb  07_training_curves.ipynb  08_checkpoint_progression.ipynb  09_fid_vs_mlflow.ipynb  eda.ipynb
notebooks/report_snippets/: checkpoint_coverage.csv  chimera_runs.csv  fid_all_evals.csv  fid_best_runs.csv  fid_mlflow_join.csv  fid_table.tex  interpolation_index.json  mlflow_summary.csv  mlflow_summary.tex  mlflow_training_timing.tex  prior_timing.csv  prior_timing.tex  progression_runs.csv  qualitative_assets.csv  training_curve_runs.csv
report/: mybib.bib  presentation.nav  presentation.tex  report.tex  report.toc
results/: fid_scores.json
results/prior_comparison/: summary.json
results/prior_comparison/seed_0/: comparison.json
results/prior_comparison/seed_3407/: comparison.json
results/prior_comparison/seed_42/: comparison.json
scripts/: chimera.py  compare_priors.py  download_data.py  evaluate.py  generate_additional_samples.py  generate_appendix_figures.py  generate_report_figures.py  interpolate.py  process_data.py  run_pixelcnn_experiment.py  run_sweep.py  select_vqvae_priors.py  train.py
src/gen_cats/: __init__.py  config.py  factory.py
src/gen_cats/data/: __init__.py  cat_dataset.py  dogcat_dataset.py  processing.py
src/gen_cats/evaluation/: __init__.py  additional_samples.py  checkpoint_resolve.py  experiment_artifacts.py  (+5 more)
tests/: test_additional_samples.py  test_checkpoint_resolve.py  test_data.py  test_evaluation.py  test_experiment_artifacts.py  test_models.py  test_report_analysis.py  test_training.py  test_vqvae_prior_selection.py
(+18 files in other folders)
